--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Un chat como telegram pero mejor ",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "chat",
@@ -14,6 +15,7 @@
   "author": "Dali",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2"
   },
   "devDependencies": {
